# vectrex-pseudo-python

./: # Code Citations.md  .gitignore  ARRAY_INLINE_LIMITATION.md  AUDIO_STUCK_INVESTIGATION.md  AUDIT_100_PERCENT_COMPLETE.md  AUDIT_EXHAUSTIVE_PHASE1.md  AUDIT_OPCODES_1TO1.md  AUDIT_PHASE1_COMPLETE.md  AUDIT_RESULTS_PHASE1.md  AUDIT_SAMPLE_DEC.md  BREAKPOINT_FIX_SESSION.md  BUILTIN_MIGRATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  COMPILER_STATUS.md  COMPILER_TODO_STATUS.md  Cargo.toml  DEBUG_SHOW_LEVEL_INVESTIGATION.md  DOCUMENTATION_INDEX.md  DRAW_VECTOR_EX_MIRROR_FIX.md  FEATURE_CENTER_MIRROR_COMPLETE.md  FINAL_CHECKLIST.md  FIXES_SUMMARY.txt  FIX_PRINT_TEXT_VECTORS.md  FLAT_FILE_STRUCTURE_ISSUES.md  GIT_INTEGRATION_FINAL_SUMMARY.md  GIT_INTEGRATION_TESTING_GUIDE.md  GUIDE_SFX_README.md  HOOK_BUG_FIXES_APPLIED.md  IDE_DIAGNOSTICS_SUMMARY.md  LINEMAP_IMPLEMENTATION.md  LINKER_PHASE2_DESIGN.md  LINKER_PHASE3_DESIGN.md  LINKER_PHASE4_DESIGN.md  LINKER_PHASE6_DESIGN.md  MANUAL.md  MCP_DEBUG_TEST.md  MCP_IMPLEMENTATION_COMPLETE.md  MIGRATION_CHECKLIST.md  (+273 more)
buildtools/: ARCHITECTURE.md  Cargo.toml  LEXER_COMPLETE.md  NEXT_STEPS_2026_01_16.md  PARSER_COMPILATION_SUCCESS.md  PARSER_PHASE_2B_STATUS.md  PARSER_STATUS.md  PHASE2_PLAN.md  PHASE3_DESIGN.md  PHASE3_SESSION_SUMMARY.md  PHASE7_LINKER_ANALYSIS.md  PHASE_2B2_STATEMENT_PARSER_COMPLETE.md  PHASE_2B3_MODULE_PARSER_COMPLETE.md  PHASE_2B_FINAL_SUMMARY.md  README.md  README_PHASE_2B.md  RECOMENDACIONES.md  ROADMAP.sh  SESSION_2026_01_15_PARSER_KICKOFF.md  SESSION_2026_01_17_PHASE6.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026_01_15.md  SESSION_SUMMARY_2026_01_16.md  STATUS.md  TASK_PHASE_2C_COMPLETION.md  TREE_SHAKING_COMPLETE.md  VERIFY_PHASE_2B.md  test_buildtools.sh  test_meta_tokens  test_meta_tokens.rs  test_music_runtime.asm  test_music_runtime.vpy
buildtools/vpy_assembler/: Cargo.toml  REFACTOR_PROGRESS.md
buildtools/vpy_bank_allocator/: Cargo.toml
buildtools/vpy_binary_writer/: Cargo.toml
buildtools/vpy_cli/: Cargo.toml
buildtools/vpy_codegen/: Cargo.toml
buildtools/vpy_debug_gen/: Cargo.toml
buildtools/vpy_disasm/: Cargo.toml
buildtools/vpy_linker/: Cargo.toml
buildtools/vpy_loader/: Cargo.toml
buildtools/vpy_parser/: Cargo.toml
buildtools/vpy_unifier/: Cargo.toml
core/: Cargo.toml  build_errors.txt
core/src/: animres.rs  ast.rs  codegen.rs  levelres.rs  lexer.rs  lib.rs  library.rs  lsp.rs  main.rs  musres.rs  parser.rs  parser.rs.backup  psg_player.asm  resolver.rs  sfxres.rs  struct_layout.rs  target.rs  unifier.rs  vecres.rs  vecres.rs.bak  vecres.rs.bak2  vecres.rs.bak3  vplay_analyzer.rs  wasm_api.rs
core/tests/: builtin_arities.rs  diagnostics_positions.rs  diagnostics_windows_path.rs  firq_test.rs  irq_baseline_test.rs  lsp_builtin_detection.rs  music_roundtrip_test.rs  musres_tests.rs  opt_pipeline.rs  semantics.rs  smoke_compile.rs  test_unifier.rs  vecres_tests.rs  via_tests.rs  wait_recal_test.rs
emulator/: Cargo.toml  analyze_diagonal.py  check_bios_bytes.py  emulator_comparison_10000_steps.txt  emulator_sync_test_output.txt
emulator/examples/: test_jsr_fix.rs
emulator/src/: bus.rs  cpu6809.rs  cpu6809_mnemonics.rs  cpu6809_types.rs  cycle_table.rs  emulator.rs  emulator_comparison_100000_steps.txt  extended_test.rs  integrator.rs  lib.rs  memory_map.rs  mod.rs  opcode_meta.rs  psg_ay.rs  via6522.rs  wasm_api.rs
emulator/tests/: addressing_modes.rs  analyze_f19e_loop.rs  analyze_f4eb_loop.rs  bios_boot_diagnostic.rs  bios_dp_side_effects.rs  bios_early_trace.rs  bios_frame_progress.rs  bios_init_flow_debug.rs  bios_integration_trace.rs  bios_labels.rs  bios_long_trace.rs  bios_main_loop_diagnostic.rs  bios_puls_probe.rs  bios_puls_rango_irq.rs  bios_puls_return_valido.rs  bios_push_trace.rs  bios_reset_probe.rs  bios_reset_vector_watch.rs  bios_sequence.rs  bsr_first_push.rs  call_stack_trace.rs  cartridge_test.rs  cycle_sampling.rs  cycle_watchdog.rs  debug_bne_simple.rs  debug_bucle_f548.rs  debug_bucle_hasta_via.rs  debug_clear_x_b.rs  debug_clr_direccion.rs  debug_copyright_cartridge.rs  debug_copyright_with_cartridge.rs  debug_delay_loop.rs  debug_despues_bucle.rs  debug_f19e_instructions.rs  debug_memory_reads.rs  debug_print_str_vectors.rs  debug_set_refresh_path.rs  debug_t2c_h_access.rs  debug_text_memory.rs  debug_timer2_bios_timing.rs  (+111 more)
emulator_v2/: BIOS_EMBEDDING_COMPLETE.md  BIOS_SIZE_FIX.md  Cargo.toml  FIX_RENDERING_FINAL.md  OFFSET_ADJUSTMENT_GUIDE.md  OFFSET_INVESTIGATION.md  OFFSET_SLIDERS_SUMMARY.md  OPCODE_TABLE_FIX_2025_10_06.md  PRINT_STR_OPCODES_ANALYSIS.md  README.md  RTS_IMPLEMENTATION_SUMMARY.md  RULES_REMINDER.md  SESSION_2025_10_04_BIOS_EMBEDDED.md  SESSION_2025_10_04_WASM.md  SIMPLIFIED_INVENTIONS.md  TEST_COVERAGE_ARITH_LOGIC_DIRECT_A.md  TEST_FIXES_AFTER_OPCODE_CORRECTIONS.md  TEST_MIGRATION_PROGRESS.md  TEST_MIGRATION_SUMMARY.md  TEST_ORGANIZATION.md  TODO_IMPLEMENTATION_QUEUE.md  TODO_OPCODE_IMPLEMENTATION.md  TODO_OPCODE_IMPLEMENTATION_REAL.md  TODO_OPCODE_IMPLEMENTATION_TABLE.md  VECTOR_SNAPSHOT_FEATURE.md  WASM_API.md  WASM_BUILD_SUCCESS.md  build-wasm.ps1  build_errors.txt  compare_opcode_tables.py  test_debug.html  test_fusion.html  test_jsvecx.html  test_wasm.html  test_wasm_original.html  vectrex_emulator_v2_bg.wasm
emulator_v2/pkg/: vectrex_emulator_v2.d.ts  vectrex_emulator_v2.js  vectrex_emulator_v2_bg.wasm  vectrex_emulator_v2_bg.wasm.d.ts
emulator_v2/src/: bios_rom.rs  lib.rs  simple_test.rs  simple_wasm_test.rs  wasm_api.rs  wasm_api_backup.rs  wasm_api_simple.rs  wasm_api_working.rs
emulator_v2/test_minimal/: Cargo.toml
emulator_v2/test_simple_wasm/: Cargo.toml
emulator_v2/tests/: bios_print_str_analysis.rs  debug_indexed_test.rs  debug_orcc_andcc.rs  integration_test.rs  interrupt_vector_rom.rs  mod.rs  test_add_sub_opcodes.rs  test_adda_variants.rs  test_and_eor_opcodes.rs  test_arithmetic_corrected.rs  test_basic_opcodes_fixed.rs  test_beam_positioning_bug.rs  test_bit_opcodes.rs  test_branch_opcodes.rs  test_cmpa_opcodes.rs  test_cmpb_opcodes.rs  test_cmpd_opcodes.rs  test_cmps_opcodes.rs  test_debug.rs  (+35 more)
(+2074 files in other folders)
