[package]
name = "vectrex_lang"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Ferrer <you@example.com>"]
description = "Prototype pseudo-Python to 6809 assembler compiler for Vectrex"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1.47", features = ["rt-multi-thread","macros","io-std"] }
lazy_static = "1.4"
serde_json = "1.0"

# Emulator crate removed - using JSVecx instead

[features]
default = []


[lib]
crate-type = ["rlib"]

[[bin]]
name = "vpy_lsp"
path = "src/bin/vpy_lsp.rs"
