[package]
name = "vectrex_emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Ferrer <you@example.com>"]
description = "Vectrex 6809 emulator core with optional WASM bindings"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
wasm = ["wasm-bindgen", "web-sys"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true, features=["serde-serialize"] }
web-sys = { version = "0.3", optional = true, features = ["console"] }
serde = { version = "1.0", features=["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]

[lib]
crate-type = ["rlib", "cdylib"]
