[package]
name = "vectrex_emulator_v2"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "unwind"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# getrandom con feature "js" para WASM - siempre activo para resolver dependencia de rand
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[lib]
name = "vectrex_emulator_v2"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sdl_frontend"
path = "frontends/sdl2/main.rs"
required-features = ["sdl2"]

[features]
default = []
sdl2 = ["dep:sdl2"]
wasm = ["wasm-bindgen"]

[dependencies.sdl2]
version = "0.35"
optional = true

[dependencies.wasm-bindgen] 
version = "0.2"
optional = true

