[package]
name = "vpy_codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
vpy_parser = { path = "../vpy_parser" }
vpy_unifier = { path = "../vpy_unifier" }
vpy_bank_allocator = { path = "../vpy_bank_allocator" }
thiserror = "1.0"

[dev-dependencies]
