[package]
name = "vpy_ide"
version = "0.1.0"
edition = "2021"
description = "Vectrex pseudo-python IDE (Tauri)"
license = "MIT"

[dependencies]
tauri = { version = "1", features = ["shell-all", "process-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
anyhow = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = []

[package.metadata.tauri]
# Sidecar se declarará en tauri.conf.json
